--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,8 @@ PyYAML==6.0.3
 lap==0.5.12
 
 # --- OpenCV / 영상 ---
-opencv-python==4.12.0
-opencv-python-headless==4.12.0
++ opencv-python==4.12.0.88
++ opencv-python-headless==4.12.0.88
 
 # --- YOLO / 딥러닝 ---
 torch==2.9.1
